truncate and word wrap long descriptions
Adds word wrap for long descriptions with no line breaks on the
students/show page. Also adds truncation to the description tooltip
on the calendar page since word wrap is a little harder to pull off

--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -25,6 +25,7 @@ a.student-links {
 .schedule-accordion {
   margin-bottom: 3em;
   width: 50%;
+  word-wrap: break-word;
 
   // all accordian rows
   .accordion-field {
@@ -115,4 +116,9 @@ p.notice {
 .absent-label {
   color: #f0827a;
   font-weight: bold;
+}
+
+// fix word wrap issues on accordions
+.ui-accordion-header {
+
 }
