--- a/app/views/students/calendar.html.erb
+++ b/app/views/students/calendar.html.erb
@@ -40,7 +40,7 @@
           <% tmp_class = 'weekend' if _ctr >= 5 %>
           <div class="<%= tmp_class %>">
             <% for schedule in day do %>
-              <%= content_tag :div, schedule.to_s, :class => [schedule.css_classes, 'calender-field'], :title => schedule.description %>
+              <%= content_tag :div, schedule.to_s, :class => [schedule.css_classes, 'calender-field'], :title => truncate(schedule.description) %>
             <% end %>
           </div>
           <% _ctr += 1 %>
