Update jquery-ui with new theme
Jquery-ui has a new look to its elements. Load background images
and icons correctly. Overwrite background element for accordions
to fix layering bug.

--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -29,7 +29,7 @@ a.student-links {
 
   // all accordian rows
   .accordion-field {
-    background-color: #eee;
+    background: #eee;
 
     // the labels
     div div span {
