Finish link changes
Clean up some more CSS and finalize changes to the look of links.
All links are jQuerified as buttons and refitted to elements. Also
make some minor changes to view titles, table look and other minor
visual changes.

--- a/app/assets/stylesheets/scheduler.css.scss
+++ b/app/assets/stylesheets/scheduler.css.scss
@@ -126,25 +126,14 @@ input, textarea, select {
   float: right;
 }
 
-#menu ul {
+#menu {
   margin: 0;
   padding: 15px 0 0 0;
-  list-style: none;
-}
 
-#menu li {
-  display: inline;
-}
-
-#menu a {
-  display: block;
-  float: left;
-  margin-left: 20px;
-  padding: 7px;
-}
-
-#menu .active a {
-  background: url(img02.gif) repeat-x left bottom;
+  span {
+    margin: 0.2rem 0;
+    font-size: 1.2rem;
+  }
 }
 
 /* Page */
