--- a/app/views/students/_user_index.erb
+++ b/app/views/students/_user_index.erb
@@ -3,16 +3,14 @@
     <span>Username</span>
     <span>Full Name</span>
   </div>
-  <% shaded_toggle = true %>
   <% @students.each do |student| %>
-      <div class="index-row <%= "shaded" if shaded_toggle %>">
+      <div class="index-row">
         <span><%= student.username %></span>
         <span><%= student.fullname %></span>
-        <span class="links"><%= link_to 'Show', student %></span>
-        <span class="links"><%= link_to 'Edit', edit_student_path(student) %></span>
-        <span class="links"><%= link_to 'New Schedule', new_student_schedule_path(student) %></span>
-        <span class="links"><%= link_to 'Delete User', student, method: :delete, data: { confirm: 'Are you sure?' } %></span>
+        <%= link_to 'Show', student, class: 'button' %>
+        <%= link_to 'Edit', edit_student_path(student), class: 'button' %>
+        <%= link_to 'New Schedule', new_student_schedule_path(student), class: 'button' %>
+        <%= link_to 'Delete User', student, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button' %>
       </div>
-      <% shaded_toggle = !shaded_toggle %>
   <% end %>
 </div>
