--- a/app/views/students/administrators.erb
+++ b/app/views/students/administrators.erb
@@ -1,5 +1,5 @@
-<h1>Listing administrators</h1>
+<h1>Administrators</h1>
 
-<%= link_to 'New User Account', new_student_path, :class => 'student-links' %>
+<%= link_to 'New User Account', new_student_path, :class => 'button' %>
 
 <%= render 'user_index' %>
