--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -56,13 +56,8 @@
 </p>
 
 <p>
-  <b>Permanent:</b>
-  <%= @schedule.permanent %>
-</p>
-
-<p>
-  <b>Absent:</b>
-  <%= @schedule.absent %>
+  <b>Type:</b>
+  <%= @schedule.group %>
 </p>
 
 <p>
