--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -21,11 +21,11 @@
     <div id="date-fields">
       <div class="field">
         <%= f.label :start_date %>
-        <%= f.date_select :start_date, {start_year: Time.now.year, end_year: Time.now.year + 2, default: Time.now} %>
+        <%= f.text_field :start_date %>
       </div>
       <div class="field">
         <%= f.label :end_date %>
-        <%= f.date_select :end_date, {start_year: Time.now.year, end_year: Time.now.year + 2, default: Time.now} %>
+        <%= f.text_field :end_date %>
       </div>
     </div>
 
