--- a/app/assets/stylesheets/schedules.css.scss
+++ b/app/assets/stylesheets/schedules.css.scss
@@ -10,14 +10,36 @@
 }
 
 #schedule-form {
+  // Bolds all jq buttonset elements as well, fix this!
+  label { font-weight: bold; }
 
-  label {
-    //font-size: 18px;
+  div {
+    margin-bottom: 1rem;
   }
 
-  // the children divs
-  div {
-    margin-bottom: 1em;
+  .jq-buttonset {
+    div {
+      margin: 0; // reset simple_form defaults 
+      display: inline-block;
+    }
+
+    label.ui-widget {
+      // reset simple form defaults to keep from garbling
+      //  the ui buttonset elements
+      font-weight: normal;
+      margin: 0;
+      width: auto;
+      text-align: center;
+
+
+      &.ui-state-active {
+        $top-bottom-shadow: inset  0  8px 8px -8px #ffef3c,
+                            inset  0 -8px 8px -8px #ffef3c;
+        -moz-box-shadow: $top-bottom-shadow;
+        -webkit-box-shadow: $top-bottom-shadow;
+        box-shadow:  $top-bottom-shadow;
+      }
+    }
   }
 
   //start and end dates
