--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,10 +8,10 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require jquery.ui.accordion
- *= require jquery.ui.datepicker
- *= require jquery.ui.button
- *= require jquery.ui.tooltip
+ *= require jquery-ui/accordion
+ *= require jquery-ui/datepicker
+ *= require jquery-ui/button
+ *= require jquery-ui/tooltip
  *= require_self
  *= require_tree .
  */
