--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,7 @@
  *= require jquery-ui/datepicker
  *= require jquery-ui/button
  *= require jquery-ui/tooltip
+ *= require jquery-ui/slider
  *= require_self
  *= require_tree .
  */
