--- a/app/views/schedules/_form.html.slim
+++ b/app/views/schedules/_form.html.slim
@@ -1,15 +1,15 @@
 = simple_form_for [@student, @schedule] do |f|
   #schedule-form
     .jq-buttonset
-      = f.label :group, label: 'Type'
+      = f.label :group
       = f.collection_radio_buttons :group, Schedule.groups, :first, ->(x){x.first.humanize}
 
     = f.input :start_date, as: :string
-    = f.input :end_date,   as: :string, placeholder: Date.today.to_s
+    = f.input :end_date,   as: :string
     = f.input :start_time, as: :string, input_html: { value: l(f.object.start_time) }
     = f.input :end_time,   as: :string, input_html: { value: l(f.object.end_time) }
 
-    = f.input :on_days, wrapper_html: {class: 'jq-buttonset'}
+    = f.input :on_days, required: true,  wrapper_html: {class: 'jq-buttonset'}
       = f.input :monday,    label: 'M'
       = f.input :tuesday,   label: 'Tu'
       = f.input :wednesday, label: 'W'
@@ -22,3 +22,32 @@
     
     = f.hidden_field :student_id
     = f.button :submit
+
+#help-section
+  h5 Type
+  p
+    | Regular schedules are your normal scheduled hours. Temporary schedules
+      should be used whenever you're filling in for another student, or working
+      on an event, etc. Absent schedules let you call out from work. Fill in the
+      shift time that you WON'T be present, and the calendar will take care of
+      the rest.
+
+  h5 Start and end dates
+  p
+    | This is the date range that the schedule is valid. Regular schedules usually
+      span the entire semester. Absent and temporary schedules are typically
+      only a few weeks down to a single day. The calendar will not display
+      a schedule before its start date or after it expires.
+
+  h5 Shift start and end times
+  p
+   | The time slot of your shift (or absence). If you work multiple shifts on
+      the same day then you will need to make a new schedule for each shift
+
+  h5 On days
+  p Check the days that you work this time slot.
+
+  h5 Description
+  p
+    | Title or description. "Work" is fine. You can put your excuse here when
+      calling out absent and admins will see it in the notification email.
