--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<div class="profile-info">
+<div id="profile-info">
     <p>
       <b>Name:</b>
       <%= "#{@student.first_name} #{@student.last_name}" %>
