--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -10,13 +10,19 @@ div {
   }
 }
 
+textarea {
+  width: 20rem;
+  height: 3rem;
+}
+
 #notice {
   color: green;
 }
 
 .field_with_errors {
-  padding: 2px;
-  background-color: red;
+  padding: 5px 20px 5px 0;
+  border-radius: 10px;
+  border: 3px solid #ff4040;
   display: table;
 }
 
