Modify presenters and start work on new calendar view
Update routes to point to new calendar view. Add application presenter
to hold generic code. Clean up SchedulePresenter to be a little
cleaner. Start new calendar css from scratch.

--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -11,7 +11,19 @@ $label-font-size: 1.7em;
 
 #calendar {
 
-  .cal_day {}
-  .cal_week {}
-  .cal_month {}
+  .cal-day {
+    .schedule {
+      // todo: probably need absolute positioning
+      position: relative;
+      border: 1px solid black;
+
+      .name {
+        background-color: ligthblue;
+      }
+      .shift-begin {}
+      .shift-end {}
+    }
+  }
+  .cal-week {}
+  .cal-month {}
 }
