--- a/app/assets/stylesheets/simple_form.css.scss
+++ b/app/assets/stylesheets/simple_form.css.scss
@@ -12,6 +12,20 @@
     text-align: right;
     margin: 2px 10px;
   }
+  .error {
+    clear: left;
+    color: #fe4040;
+    font-weight: bold;
+    display: block;
+    margin-left: 120px;
+  }
+  .hint {
+    clear: left;
+    margin-left: 120px;
+    color: #555;
+    display: block;
+    font-style: italic;
+  }
 }
 
 div.boolean, .simple_form input[type='submit'] {
@@ -32,24 +46,22 @@ label.collection_radio_buttons {
 }
 
 .field_with_errors {
-  // see in scaffolds.css.scss
+  padding: 5px 20px 5px 0;
+  border-radius: 10px;
+  border: 3px solid #ff4040;
+  display: table;
 }
 
-.simple_form {
-  .error {
-    clear: left;
-    color: #fe4040;
-    font-weight: bold;
-    display: block;
-    margin-left: 120px;
-  }
-  .hint {
-    clear: left;
-    margin-left: 120px;
-    color: #555;
-    display: block;
-    font-style: italic;
-  }
+input, textarea, select {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+  color: #212121;
+}
+
+textarea {
+  width: 320px;
+  height: 64px;
 }
 
 input {
