--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,18 +1,16 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
  *= require jquery-ui/accordion
  *= require jquery-ui/datepicker
  *= require jquery-ui/button
  *= require jquery-ui/tooltip
  *= require jquery-ui/slider
- *= require_self
- *= require_tree .
  */
+
+ @import "styles.css.scss";
+ @import "jquery-ui.css.scss";
+ @import "jquery-ui-timepicker-addon.css.scss";
+ @import "scheduler.css.scss";
+ @import "simple_form.css.scss";
+ @import "schedules.css.scss";
+ @import "students.css.scss";
+ @import "_calendar.css.scss";
