--- a/app/assets/stylesheets/scheduler.css.scss
+++ b/app/assets/stylesheets/scheduler.css.scss
@@ -17,8 +17,11 @@ h1, h2, h3, h5 {
   color: #676767;
 }
 
-h1 {
+h1, h4, h5, h6 {
   margin: 0;
+}
+
+h1 {
   font-size: 2rem;
   padding-bottom: 1rem;
 }
